# matsugane

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  justfile  main.py  matsugane.sln  pyproject.toml  utils.py
.github/workflows/: ci.yaml  ci.yml
components/: page_header.py  played_tracks_table.py  stats_header.py
data/: lastfm.py
matsugane/: Dockerfile  Program.cs  matsugane.csproj  package.json
matsugane.Data/: matsugane.Data.csproj
matsugane.Data/Db/: Conn.cs  MatsuganeContext.cs  Profile.cs  User.cs
matsugane.Data/Lastfm/: Api.cs  Item.cs  PlaysByHour.cs  Stats.cs  Track.cs  Tracks.cs  Utils.cs
matsugane.Data/Utils/: StatsExtensions.cs
matsugane.Translation/: Japanese.cs  matsugane.Translation.csproj
matsugane/Components/: App.razor  Routes.razor  _Imports.razor
matsugane/Components/Forms/: Input.razor
matsugane/Components/Home/: Cell.razor  StatsHeader.razor  Table.razor
matsugane/Components/Layout/: MainLayout.razor  NavMenu.razor
matsugane/Components/Pages/: Home.razor  Login.razor  Logout.razor
matsugane/Components/Pages/Apps/: Lastfm.razor
matsugane/Components/Pages/Apps/Lastfm/: Lastfm.razor
matsugane/Components/Pages/Apps/Plexfm/: Plexfm.razor
matsugane/Components/Pages/Auth/: Login.razor  Logout.razor
matsugane/Components/Shared/: OutsideClickDetector.razor
matsugane/Components/Shared/Forms/: Button.razor
matsugane/Lastfm/: Api.cs  Item.cs  PlaysByHour.cs  Stats.cs  Track.cs  Tracks.cs  Utils.cs
matsugane/Properties/: launchSettings.json
matsugane/Utils/: JsConsole.cs  NavigationManagerExtensions.cs  StatsExtensions.cs  Time.cs
matsugane/wwwroot/: app.css
music/: album.py  artist.py  track.py  tracks.py  treemap.py
src/lastfm_stats/: main.py  utils.py
src/lastfm_stats/components/: page_header.py  played_tracks_table.py  stats_header.py
src/lastfm_stats/data/: lastfm.py
src/lastfm_stats/music/: album.py  artist.py  track.py  tracks.py  treemap.py
src/matsugane/: main.py  styles.tcss  utils.py
src/matsugane/components/: last_refresh.py  played_tracks_table.py  recent_plays.py  stats_header.py  top_artists.py  top_plays_by_hour.py  ui.py
src/matsugane/data/: lastfm.py  stats.py
src/matsugane/music/: album.py  artist.py  stats.py  track.py  tracks.py  treemap.py
tests/: test_music.py
