[project]
name = "matsugane"
version = "0.1.1"
description = "Displays stats from Last.fm using Ploty Dash graphs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aenum>=3.1.15",
    "cuid2>=2.0.1",
    "cutlet>=0.5.0",
    "dash>=2.18.2",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pydantic>=2.10.5",
    "pylast>=5.3.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "unidic-lite>=1.0.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
lint = [
    "pyright>=1.1.392",
    "ruff>=0.9.1",
]

[project.scripts]
lastfm_stats = "matsugane.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/matsugane"]


[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.idea",
    "**/.pytest_cache",
    "**/tests",
    "**/.git",
    "**/playground"
]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.13.1"
pythonPlatform = "Darwin"
