[project]
name = "matsugane"
version = "0.5.0"
description = "Displays stats from Last.fm using Ploty Dash graphs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aenum>=3.1.15",
    "arrow>=1.3.0",
    "attrs>=25.1.0",
    "cutlet>=0.5.0",
    "httpx>=0.28.1",
    "more-itertools>=10.6.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "textual>=1.0.0",
    "textual-plotext>=1.0.1",
    "unidic-lite>=1.0.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "textual-dev>=1.7.0",
    "pyright>=1.1.393",
    "ruff>=0.9.4",
    "toml>=0.10.2",
    "black>=25.1.0",
]


[project.scripts]
lastfm_stats = "matsugane.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/matsugane"]


[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.pyright]
venvPath = "./.venv"
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.idea",
    "**/.pytest_cache",
    "**/tests",
    "**/.git",
    "debug.py"
]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.13.1"
pythonPlatform = "Darwin"
